{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 74,
  "lineage": "d9b9098c-fdbc-0ee7-21f6-c651fbd94940",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-47a4e86210e91661e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-5bb8045f24b96f0b2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-47a4e86210e91661e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-9c17fb0f6a78d64ac",
            "owner_id": "000000000000",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:vpc/vpc-7ba62e2855dc58660",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-54614b185ad94e2a2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-7ba62e2855dc58660",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b2efd49452bbead45",
            "owner_id": "000000000000",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-c8966ff0b74213ce6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-c8966ff0b74213ce6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TapStack-staging-us-east-1-alb-20251224091634720100000001",
            "name_prefix": "TapStack-staging-us-east-1-alb-",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-47a4e86210e91661e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-c8966ff0b74213ce6",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:security-group/sg-47e9d267a7ea5287d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-47e9d267a7ea5287d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TapStack-staging-us-west-2-alb-20251224091634931800000001",
            "name_prefix": "TapStack-staging-us-west-2-alb-",
            "owner_id": "000000000000",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-7ba62e2855dc58660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-47e9d267a7ea5287d",
            "region": "us-west-2"
          },
          "dependencies": [
            "data.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-48abd1e7d4293b07c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-48abd1e7d4293b07c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-c8966ff0b74213ce6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TapStack-staging-us-east-1-app-20251224091635087400000002",
            "name_prefix": "TapStack-staging-us-east-1-app-",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-47a4e86210e91661e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-48abd1e7d4293b07c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000000000000:security-group/sg-74834ea59edb9c003",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-74834ea59edb9c003",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-47e9d267a7ea5287d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TapStack-staging-us-west-2-app-20251224091635244000000002",
            "name_prefix": "TapStack-staging-us-west-2-app-",
            "owner_id": "000000000000",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "timeouts": null,
            "vpc_id": "vpc-7ba62e2855dc58660"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-74834ea59edb9c003",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.alb_secondary",
            "data.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-8737c1b06d5767fd7",
            "peer_owner_id": "000000000000",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-7ba62e2855dc58660",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "TapStack-staging-peering",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "TapStack-staging-peering",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "vpc_id": "vpc-47a4e86210e91661e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.primary",
            "data.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-8737c1b06d5767fd7",
            "peer_owner_id": "000000000000",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-7ba62e2855dc58660",
            "region": "us-west-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "TapStack-staging-peering",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "TapStack-staging-peering",
              "Owner": "terraform",
              "Project": "TapStack"
            },
            "vpc_id": "vpc-47a4e86210e91661e",
            "vpc_peering_connection_id": "pcx-8737c1b06d5767fd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.main",
            "data.aws_vpc.primary",
            "data.aws_vpc.secondary"
          ]
        }
      ]
    }
  ]
}